feat: add validator
