# src/main/java/com/example/demo/endpoint/rest/controller/movement/TravelOperationController.java
@@ -1,6 +1,8 @@
 package com.example.demo.endpoint.rest.controller.movement;
 
+import com.example.demo.client.model.TravelExpense;
 import com.example.demo.client.model.TravelOperationRequest;
+import com.example.demo.endpoint.rest.mapper.money.TravelExpenseMapper;
 import com.example.demo.endpoint.rest.mapper.movement.TravelOperationMapper;
 import com.example.demo.service.movement.TravelOperationService;
 import lombok.RequiredArgsConstructor;
@@ -16,15 +18,17 @@ public class TravelOperationController {
 
   private final TravelOperationMapper travelOperationMapper;
   private final TravelOperationService travelOperationService;
+  private final TravelExpenseMapper travelExpenseMapper;
 
   @PostMapping("/companies/{comp_id}/job/{job_id}/user/{user_id}/travel_operations")
   @PreAuthorize(
       "hasAnyRole('ADMIN', 'ADMINISTRATION', 'WAREHOUSE_WORKER') or #user_id == authentication.principal.id")
-  public void createTravelOperation(
+  public TravelExpense createTravelOperation(
       @PathVariable String comp_id,
       @PathVariable String job_id,
       @PathVariable String user_id,
       @RequestBody TravelOperationRequest request) {
-    travelOperationService.create(travelOperationMapper.toAggregate(job_id, user_id, request));
+    return travelExpenseMapper.toRestTravelExpense(
+        travelOperationService.create(travelOperationMapper.toAggregate(job_id, user_id, request)));
   }
 }
